# SisOps2

./: CMakeLists.txt  cmd01  cmd01.c  exec01  exec01.c  fork  fork.c  fork01  fork01.c  fork02  fork02.c  fork03  fork03.c  fork04  fork04.c  fork05  fork05.c  fork_ex4  fork_ex4.c  forkteste  forkteste.c  mtts
EfolioA/: gsn  gsn.c  teste1  tmp.txt
EfolioB/: CMakeLists.txt  ficheiro.txt  mtts  mtts.c  mtts1  mtts1.c  mtts2  mtts2.c  mtts3  mtts3.c  pre_final  pre_final.c  ~$cheiro.txt
main.dSYM/Contents/Resources/DWARF/: main
mtts.dSYM/Contents/: Info.plist
mtts.dSYM/Contents/Resources/DWARF/: mtts
